# calculator

./: 0001-fix-truncation-error.patch  0002-formatting-use-tabs-instead-of-spaces.patch  CMakeLists.txt  Makefile  README.md  calculator.cpp  calculator.h  main.cpp  test.txt
patches/: 0001-improve-calculation-accuracy.patch  0002-fix-truncation-error.patch
